Connect to Growatt Inverter

--- a/attributes.yaml
+++ b/attributes.yaml
@@ -1,3 +1,84 @@
-connected:
-  name: Connected
+serial:
+  name: Serial
   type: sensor
+
+run_mode:
+  name: Run Mode
+  type: sensor
+
+voltage_pv1:
+  name: Voltage PV1
+  type: sensor
+  device_class: voltage
+  state_class: measurement
+  unit_of_measurement: V
+
+voltage_pv2:
+  name: Voltage PV1
+  type: sensor
+  device_class: voltage
+  state_class: measurement
+  unit_of_measurement: V
+
+voltage_l1:
+  name: Voltage L1
+  type: sensor
+  device_class: voltage
+  state_class: measurement
+  unit_of_measurement: V
+
+voltage_l2:
+  name: Voltage L2
+  type: sensor
+  device_class: voltage
+  state_class: measurement
+  unit_of_measurement: V
+
+voltage_l3:
+  name: Voltage L3
+  type: sensor
+  device_class: voltage
+  state_class: measurement
+  unit_of_measurement: V
+
+power:
+  name: Power
+  type: sensor
+  device_class: power
+  state_class: measurement
+  unit_of_measurement: W
+
+power_ac:
+  name: Power AC
+  type: sensor
+  device_class: power
+  state_class: measurement
+  unit_of_measurement: W
+
+power_pv1:
+  name: Power PV1
+  type: sensor
+  device_class: power
+  state_class: measurement
+  unit_of_measurement: W
+
+power_pv2:
+  name: Power PV2
+  type: sensor
+  device_class: power
+  state_class: measurement
+  unit_of_measurement: W
+
+meter_power_today:
+  name: Power Today
+  type: sensor
+  device_class: power
+  state_class: total_increasing
+  unit_of_measurement: kWh
+
+meter_power:
+  name: Power Total
+  type: sensor
+  device_class: power
+  state_class: total
+  unit_of_measurement: kWh
