--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/express": "^4.17.1",
+    "@types/node-fetch": "2.6.11",
+    "@types/luxon": "3.4.2",
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "ts-node": "^10.9.2",
@@ -19,7 +21,9 @@
     "typescript-eslint": "^8.4.0"
   },
   "dependencies": {
+    "quantumhub-sdk": "1.0.1",
     "modbus-serial": "8.0.17",
-    "quantumhub-sdk": "1.0.0"
+    "node-fetch": "2.7.0",
+    "luxon": "3.4.4"
   }
 }
