--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "growatt-3ph-mod-tl3-x",
+  "name": "modbus-solarman",
   "version": "1.0.0",
   "description": "Growatt 3PH MOD TL3-X via Modbus communication",
-  "main": "growatt-3ph-mod-tl3-x.ts",
+  "main": "modbus-solarman.ts",
   "scripts": {
     "lint": "eslint ."
   },
