--- a/afore.yaml
+++ b/afore.yaml
@@ -1,15 +1,11 @@
 package:
-  name: modbus-solarman
+  name: afore
   version: 1.0.0
-  description: QuantumHub module for Growatt and Afore inverters
+  description: QuantumHub module for Afore AF XK-TH Three Phase Hybrid Inverter Serie
   author: Wim Haanstra
   entry: modbus-solarman.ts
 
 attributes:
-  serial:
-    name: Serial
-    type: sensor
-
   status_code_run_mode:
     name: Run Mode
     type: sensor
@@ -60,41 +56,6 @@ attributes:
     state_class: measurement
     unit_of_measurement: V
 
-  measure_voltage_grid_l1:
-    name: Voltage L1
-    type: sensor
-    device_class: voltage
-    state_class: measurement
-    unit_of_measurement: V
-
-  measure_voltage_grid_l2:
-    name: Voltage L2
-    type: sensor
-    device_class: voltage
-    state_class: measurement
-    unit_of_measurement: V
-
-  measure_voltage_grid_l3:
-    name: Voltage L3
-    type: sensor
-    device_class: voltage
-    state_class: measurement
-    unit_of_measurement: V
-
-  measure_power:
-    name: Power
-    type: sensor
-    device_class: power
-    state_class: measurement
-    unit_of_measurement: W
-
-  measure_power_ac:
-    name: Power AC
-    type: sensor
-    device_class: power
-    state_class: measurement
-    unit_of_measurement: W
-
   measure_power_pv:
     name: Power PV
     type: sensor
@@ -115,20 +76,6 @@ attributes:
     device_class: power
     state_class: measurement
     unit_of_measurement: W
-
-  meter_power_today:
-    name: Power Today
-    type: sensor
-    device_class: energy
-    state_class: total_increasing
-    unit_of_measurement: kWh
-
-  meter_power:
-    name: Power Total
-    type: sensor
-    device_class: energy
-    state_class: total
-    unit_of_measurement: kWh
 
   measure_power_battery:
     name: Power Battery
@@ -211,6 +158,10 @@ attributes:
     type: sensor
     state_class: measurement
     unit_of_measurement: '%'
+
+  ems_mode_text:
+    name: EMS Mode
+    type: sensor
 
   ems_mode:
     name: EMS Mode
