--- a/growatt-tl.yaml
+++ b/growatt-tl.yaml
@@ -1,9 +1,11 @@
 package:
-  name: growatt-tl
+  name: Growatt MID TL series
+  identifier: growatt-mid-tl
   version: 1.0.0
   description: QuantumHub module for Growatt MID TL series
   author: Wim Haanstra
   entry: modbus-solarman.ts
+  repository: https://github.com/sorted-bits/modbus-solarman
 
 attributes:
   serial:
