--- a/growatt-mod-tl3-x.yaml
+++ b/growatt-mod-tl3-x.yaml
@@ -1,6 +1,5 @@
 package:
-  name: Growatt MOD TL3-X series
-  identifier: growatt-mod-tl3-x
+  name: growatt-mod-tl3-x
   version: 1.0.0
   description: QuantumHub module for Growatt MOD TL3-X series
   author: Wim Haanstra
